engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__MixedChildrenNotFlattened@MixedChildrenNotFlattened.baml.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshot_value
input_file: baml-runtime/src/control_flow/testdata/MixedChildrenNotFlattened.baml
---
hir: "Some(\n    Block {\n        statements: [\n            HeaderContextEnter(\n                HeaderContext {\n                    level: 1,\n                    title: \"MD Child\",\n                    span: Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/MixedChildrenNotFlattened.baml\", contents: ... },\n                        start: 64,\n                        end: 77,\n                    },\n                },\n            ),\n            DeclareAndAssign {\n                name: \"items\",\n                value: Array(\n                    [\n                        NumericValue(\n                            \"42\",\n                            Span {\n                                file: SourceFile { path: \"src/control_flow/testdata/MixedChildrenNotFlattened.baml\", contents: ... },\n                                start: 95,\n                                end: 97,\n                            },\n                        ),\n                    ],\n                    Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/MixedChildrenNotFlattened.baml\", contents: ... },\n                        start: 94,\n                        end: 98,\n                    },\n                ),\n                annotated_type: None,\n                watch: None,\n                span: Span {\n                    file: SourceFile { path: \"src/control_flow/testdata/MixedChildrenNotFlattened.baml\", contents: ... },\n                    start: 82,\n                    end: 100,\n                },\n            },\n            ForLoop {\n                identifier: \"item\",\n                iterator: Identifier(\n                    \"items\",\n                    Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/MixedChildrenNotFlattened.baml\", contents: ... },\n                        start: 121,\n                        end: 126,\n                    },\n                ),\n                block: Block {\n                    statements: [\n                        HeaderContextEnter(\n                            HeaderContext {\n                                level: 1,\n                                title: \"Loop Child\",\n                                span: Span {\n                                    file: SourceFile { path: \"src/control_flow/testdata/MixedChildrenNotFlattened.baml\", contents: ... },\n                                    start: 138,\n                                    end: 152,\n                                },\n                            },\n                        ),\n                    ],\n                    trailing_expr: Some(\n                        Identifier(\n                            \"item\",\n                            Span {\n                                file: SourceFile { path: \"src/control_flow/testdata/MixedChildrenNotFlattened.baml\", contents: ... },\n                                start: 161,\n                                end: 165,\n                            },\n                        ),\n                    ),\n                },\n                span: Span {\n                    file: SourceFile { path: \"src/control_flow/testdata/MixedChildrenNotFlattened.baml\", contents: ... },\n                    start: 104,\n                    end: 171,\n                },\n            },\n        ],\n        trailing_expr: Some(\n            StringValue(\n                \"done\",\n                Span {\n                    file: SourceFile { path: \"src/control_flow/testdata/MixedChildrenNotFlattened.baml\", contents: ... },\n                    start: 176,\n                    end: 182,\n                },\n            ),\n        ),\n    },\n)"
expr:
  nodes:
    "0":
      label: MixedChildrenNotFlattened
      lexical_id: "MixedChildrenNotFlattened|root:0"
      node_type: function
      parent: ~
      span:
        file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
        start: 11
        end: 184
    "1":
      label: MD Child
      lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0"
      node_type: header
      parent: "0"
      span:
        file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
        start: 64
        end: 77
    "2":
      label: for (item in items)
      lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0"
      node_type: loop
      parent: "1"
      span:
        file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
        start: 104
        end: 171
    "3":
      label: Loop Child
      lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0|hdr:loop-child:0"
      node_type: header
      parent: "2"
      span:
        file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
        start: 138
        end: 152
  edges: {}
mermaid: "flowchart TD\nsubgraph n0[\"0: MixedChildrenNotFlattened\"]\n  direction TB\n  subgraph n1[\"1: MD Child\"]\n    direction TB\n    subgraph n2[\"2: Loop: for (item in items)\"]\n      direction TB\n      n3[\"3: Loop Child\"]\n    end\n  end\nend\n"
flattening:
  pass1_remove_implicit:
    label: Remove implicit nodes
    expr:
      nodes:
        "0":
          label: MixedChildrenNotFlattened
          lexical_id: "MixedChildrenNotFlattened|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 11
            end: 184
        "1":
          label: MD Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 64
            end: 77
        "2":
          label: for (item in items)
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "1"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 104
            end: 171
        "3":
          label: Loop Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0|hdr:loop-child:0"
          node_type: header
          parent: "2"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 138
            end: 152
      edges: {}
    json:
      nodes:
        "0":
          label: MixedChildrenNotFlattened
          lexical_id: "MixedChildrenNotFlattened|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 11
            end: 184
        "1":
          label: MD Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 64
            end: 77
        "2":
          label: for (item in items)
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "1"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 104
            end: 171
        "3":
          label: Loop Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0|hdr:loop-child:0"
          node_type: header
          parent: "2"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 138
            end: 152
      edges: {}
    mermaid: "flowchart TD\nsubgraph n0[\"0: MixedChildrenNotFlattened\"]\n  direction TB\n  subgraph n1[\"1: MD Child\"]\n    direction TB\n    subgraph n2[\"2: Loop: for (item in items)\"]\n      direction TB\n      n3[\"3: Loop Child\"]\n    end\n  end\nend\n"
  pass2_hoist_branch_arms:
    label: Hoist branch arms
    expr:
      nodes:
        "0":
          label: MixedChildrenNotFlattened
          lexical_id: "MixedChildrenNotFlattened|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 11
            end: 184
        "1":
          label: MD Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 64
            end: 77
        "2":
          label: for (item in items)
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "1"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 104
            end: 171
        "3":
          label: Loop Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0|hdr:loop-child:0"
          node_type: header
          parent: "2"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 138
            end: 152
      edges: {}
    json:
      nodes:
        "0":
          label: MixedChildrenNotFlattened
          lexical_id: "MixedChildrenNotFlattened|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 11
            end: 184
        "1":
          label: MD Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 64
            end: 77
        "2":
          label: for (item in items)
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "1"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 104
            end: 171
        "3":
          label: Loop Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0|hdr:loop-child:0"
          node_type: header
          parent: "2"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 138
            end: 152
      edges: {}
    mermaid: "flowchart TD\nsubgraph n0[\"0: MixedChildrenNotFlattened\"]\n  direction TB\n  subgraph n1[\"1: MD Child\"]\n    direction TB\n    subgraph n2[\"2: Loop: for (item in items)\"]\n      direction TB\n      n3[\"3: Loop Child\"]\n    end\n  end\nend\n"
  pass3_flatten_scopes:
    label: Flatten branch arms & scopes
    expr:
      nodes:
        "0":
          label: MixedChildrenNotFlattened
          lexical_id: "MixedChildrenNotFlattened|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 11
            end: 184
        "1":
          label: MD Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 64
            end: 77
        "2":
          label: for (item in items)
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "1"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 104
            end: 171
        "3":
          label: Loop Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0|hdr:loop-child:0"
          node_type: header
          parent: "2"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 138
            end: 152
      edges: {}
    json:
      nodes:
        "0":
          label: MixedChildrenNotFlattened
          lexical_id: "MixedChildrenNotFlattened|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 11
            end: 184
        "1":
          label: MD Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 64
            end: 77
        "2":
          label: for (item in items)
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "1"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 104
            end: 171
        "3":
          label: Loop Child
          lexical_id: "MixedChildrenNotFlattened|root:0|hdr:md-child:0|loop:for-item-in-items:0|hdr:loop-child:0"
          node_type: header
          parent: "2"
          span:
            file: src/control_flow/testdata/MixedChildrenNotFlattened.baml
            start: 138
            end: 152
      edges: {}
    mermaid: "flowchart TD\nsubgraph n0[\"0: MixedChildrenNotFlattened\"]\n  direction TB\n  subgraph n1[\"1: MD Child\"]\n    direction TB\n    subgraph n2[\"2: Loop: for (item in items)\"]\n      direction TB\n      n3[\"3: Loop Child\"]\n    end\n  end\nend\n"
