engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__SimpleTest@SimpleTest.baml.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshot_value
input_file: baml-runtime/src/control_flow/testdata/SimpleTest.baml
---
hir: "Some(\n    Block {\n        statements: [\n            HeaderContextEnter(\n                HeaderContext {\n                    level: 1,\n                    title: \"Main Header\",\n                    span: Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/SimpleTest.baml\", contents: ... },\n                        start: 38,\n                        end: 53,\n                    },\n                },\n            ),\n            DeclareAndAssign {\n                name: \"x\",\n                value: StringValue(\n                    \"hello\",\n                    Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/SimpleTest.baml\", contents: ... },\n                        start: 66,\n                        end: 73,\n                    },\n                ),\n                annotated_type: None,\n                watch: None,\n                span: Span {\n                    file: SourceFile { path: \"src/control_flow/testdata/SimpleTest.baml\", contents: ... },\n                    start: 58,\n                    end: 75,\n                },\n            },\n        ],\n        trailing_expr: Some(\n            Identifier(\n                \"x\",\n                Span {\n                    file: SourceFile { path: \"src/control_flow/testdata/SimpleTest.baml\", contents: ... },\n                    start: 79,\n                    end: 80,\n                },\n            ),\n        ),\n    },\n)"
expr:
  nodes:
    "0":
      label: SimpleTest
      lexical_id: "SimpleTest|root:0"
      node_type: function
      parent: ~
      span:
        file: src/control_flow/testdata/SimpleTest.baml
        start: 0
        end: 82
    "1":
      label: Main Header
      lexical_id: "SimpleTest|root:0|hdr:main-header:0"
      node_type: header
      parent: "0"
      span:
        file: src/control_flow/testdata/SimpleTest.baml
        start: 38
        end: 53
  edges: {}
mermaid: "flowchart TD\nsubgraph n0[\"0: SimpleTest\"]\n  direction TB\n  n1[\"1: Main Header\"]\nend\n"
flattening:
  pass1_remove_implicit:
    label: Remove implicit nodes
    expr:
      nodes:
        "0":
          label: SimpleTest
          lexical_id: "SimpleTest|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 0
            end: 82
        "1":
          label: Main Header
          lexical_id: "SimpleTest|root:0|hdr:main-header:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 38
            end: 53
      edges: {}
    json:
      nodes:
        "0":
          label: SimpleTest
          lexical_id: "SimpleTest|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 0
            end: 82
        "1":
          label: Main Header
          lexical_id: "SimpleTest|root:0|hdr:main-header:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 38
            end: 53
      edges: {}
    mermaid: "flowchart TD\nsubgraph n0[\"0: SimpleTest\"]\n  direction TB\n  n1[\"1: Main Header\"]\nend\n"
  pass2_hoist_branch_arms:
    label: Hoist branch arms
    expr:
      nodes:
        "0":
          label: SimpleTest
          lexical_id: "SimpleTest|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 0
            end: 82
        "1":
          label: Main Header
          lexical_id: "SimpleTest|root:0|hdr:main-header:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 38
            end: 53
      edges: {}
    json:
      nodes:
        "0":
          label: SimpleTest
          lexical_id: "SimpleTest|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 0
            end: 82
        "1":
          label: Main Header
          lexical_id: "SimpleTest|root:0|hdr:main-header:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 38
            end: 53
      edges: {}
    mermaid: "flowchart TD\nsubgraph n0[\"0: SimpleTest\"]\n  direction TB\n  n1[\"1: Main Header\"]\nend\n"
  pass3_flatten_scopes:
    label: Flatten branch arms & scopes
    expr:
      nodes:
        "0":
          label: SimpleTest
          lexical_id: "SimpleTest|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 0
            end: 82
        "1":
          label: Main Header
          lexical_id: "SimpleTest|root:0|hdr:main-header:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 38
            end: 53
      edges: {}
    json:
      nodes:
        "0":
          label: SimpleTest
          lexical_id: "SimpleTest|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 0
            end: 82
        "1":
          label: Main Header
          lexical_id: "SimpleTest|root:0|hdr:main-header:0"
          node_type: header
          parent: "0"
          span:
            file: src/control_flow/testdata/SimpleTest.baml
            start: 38
            end: 53
      edges: {}
    mermaid: "flowchart TD\nsubgraph n0[\"0: SimpleTest\"]\n  direction TB\n  n1[\"1: Main Header\"]\nend\n"
