engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__SingleNestedChildMultiItems@SingleNestedChildMultiItems.baml.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshot_value
input_file: baml-runtime/src/control_flow/testdata/SingleNestedChildMultiItems.baml
---
hir: "Some(\n    Block {\n        statements: [\n            DeclareAndAssign {\n                name: \"items\",\n                value: Array(\n                    [\n                        NumericValue(\n                            \"1\",\n                            Span {\n                                file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                                start: 79,\n                                end: 80,\n                            },\n                        ),\n                        NumericValue(\n                            \"2\",\n                            Span {\n                                file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                                start: 82,\n                                end: 83,\n                            },\n                        ),\n                        NumericValue(\n                            \"3\",\n                            Span {\n                                file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                                start: 85,\n                                end: 86,\n                            },\n                        ),\n                    ],\n                    Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                        start: 78,\n                        end: 87,\n                    },\n                ),\n                annotated_type: None,\n                watch: None,\n                span: Span {\n                    file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                    start: 66,\n                    end: 89,\n                },\n            },\n            ForLoop {\n                identifier: \"item\",\n                iterator: Identifier(\n                    \"items\",\n                    Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                        start: 111,\n                        end: 116,\n                    },\n                ),\n                block: Block {\n                    statements: [\n                        HeaderContextEnter(\n                            HeaderContext {\n                                level: 1,\n                                title: \"First\",\n                                span: Span {\n                                    file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                                    start: 128,\n                                    end: 138,\n                                },\n                            },\n                        ),\n                        DeclareAndAssign {\n                            name: \"x\",\n                            value: Identifier(\n                                \"item\",\n                                Span {\n                                    file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                                    start: 155,\n                                    end: 159,\n                                },\n                            ),\n                            annotated_type: None,\n                            watch: None,\n                            span: Span {\n                                file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                                start: 147,\n                                end: 161,\n                            },\n                        },\n                        HeaderContextEnter(\n                            HeaderContext {\n                                level: 1,\n                                title: \"Second\",\n                                span: Span {\n                                    file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                                    start: 170,\n                                    end: 181,\n                                },\n                            },\n                        ),\n                    ],\n                    trailing_expr: Some(\n                        Identifier(\n                            \"x\",\n                            Span {\n                                file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                                start: 190,\n                                end: 191,\n                            },\n                        ),\n                    ),\n                },\n                span: Span {\n                    file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                    start: 94,\n                    end: 197,\n                },\n            },\n        ],\n        trailing_expr: Some(\n            StringValue(\n                \"done\",\n                Span {\n                    file: SourceFile { path: \"src/control_flow/testdata/SingleNestedChildMultiItems.baml\", contents: ... },\n                    start: 203,\n                    end: 209,\n                },\n            ),\n        ),\n    },\n)"
expr:
  nodes:
    "0":
      label: SingleNestedChildMultiItems
      lexical_id: "SingleNestedChildMultiItems|root:0"
      node_type: function
      parent: ~
      span:
        file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
        start: 11
        end: 211
    "1":
      label: for (item in items)
      lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0"
      node_type: loop
      parent: "0"
      span:
        file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
        start: 94
        end: 197
    "2":
      label: First
      lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:first:0"
      node_type: header
      parent: "1"
      span:
        file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
        start: 128
        end: 138
    "3":
      label: Second
      lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:second:1"
      node_type: header
      parent: "1"
      span:
        file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
        start: 170
        end: 181
  edges:
    "2":
      - "3"
mermaid: "flowchart TD\nsubgraph n0[\"0: SingleNestedChildMultiItems\"]\n  direction TB\n  subgraph n1[\"1: Loop: for (item in items)\"]\n    direction TB\n    n2[\"2: First\"]\n    n3[\"3: Second\"]\n    n2 --> n3\n  end\nend\n"
flattening:
  pass1_remove_implicit:
    label: Remove implicit nodes
    expr:
      nodes:
        "0":
          label: SingleNestedChildMultiItems
          lexical_id: "SingleNestedChildMultiItems|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 11
            end: 211
        "1":
          label: for (item in items)
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "0"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 94
            end: 197
        "2":
          label: First
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:first:0"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 128
            end: 138
        "3":
          label: Second
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:second:1"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 170
            end: 181
      edges:
        "2":
          - "3"
    json:
      nodes:
        "0":
          label: SingleNestedChildMultiItems
          lexical_id: "SingleNestedChildMultiItems|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 11
            end: 211
        "1":
          label: for (item in items)
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "0"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 94
            end: 197
        "2":
          label: First
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:first:0"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 128
            end: 138
        "3":
          label: Second
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:second:1"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 170
            end: 181
      edges:
        "2":
          - "3"
    mermaid: "flowchart TD\nsubgraph n0[\"0: SingleNestedChildMultiItems\"]\n  direction TB\n  subgraph n1[\"1: Loop: for (item in items)\"]\n    direction TB\n    n2[\"2: First\"]\n    n3[\"3: Second\"]\n    n2 --> n3\n  end\nend\n"
  pass2_hoist_branch_arms:
    label: Hoist branch arms
    expr:
      nodes:
        "0":
          label: SingleNestedChildMultiItems
          lexical_id: "SingleNestedChildMultiItems|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 11
            end: 211
        "1":
          label: for (item in items)
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "0"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 94
            end: 197
        "2":
          label: First
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:first:0"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 128
            end: 138
        "3":
          label: Second
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:second:1"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 170
            end: 181
      edges:
        "2":
          - "3"
    json:
      nodes:
        "0":
          label: SingleNestedChildMultiItems
          lexical_id: "SingleNestedChildMultiItems|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 11
            end: 211
        "1":
          label: for (item in items)
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "0"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 94
            end: 197
        "2":
          label: First
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:first:0"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 128
            end: 138
        "3":
          label: Second
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:second:1"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 170
            end: 181
      edges:
        "2":
          - "3"
    mermaid: "flowchart TD\nsubgraph n0[\"0: SingleNestedChildMultiItems\"]\n  direction TB\n  subgraph n1[\"1: Loop: for (item in items)\"]\n    direction TB\n    n2[\"2: First\"]\n    n3[\"3: Second\"]\n    n2 --> n3\n  end\nend\n"
  pass3_flatten_scopes:
    label: Flatten branch arms & scopes
    expr:
      nodes:
        "0":
          label: SingleNestedChildMultiItems
          lexical_id: "SingleNestedChildMultiItems|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 11
            end: 211
        "1":
          label: for (item in items)
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "0"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 94
            end: 197
        "2":
          label: First
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:first:0"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 128
            end: 138
        "3":
          label: Second
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:second:1"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 170
            end: 181
      edges:
        "2":
          - "3"
    json:
      nodes:
        "0":
          label: SingleNestedChildMultiItems
          lexical_id: "SingleNestedChildMultiItems|root:0"
          node_type: function
          parent: ~
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 11
            end: 211
        "1":
          label: for (item in items)
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0"
          node_type: loop
          parent: "0"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 94
            end: 197
        "2":
          label: First
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:first:0"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 128
            end: 138
        "3":
          label: Second
          lexical_id: "SingleNestedChildMultiItems|root:0|loop:for-item-in-items:0|hdr:second:1"
          node_type: header
          parent: "1"
          span:
            file: src/control_flow/testdata/SingleNestedChildMultiItems.baml
            start: 170
            end: 181
      edges:
        "2":
          - "3"
    mermaid: "flowchart TD\nsubgraph n0[\"0: SingleNestedChildMultiItems\"]\n  direction TB\n  subgraph n1[\"1: Loop: for (item in items)\"]\n    direction TB\n    n2[\"2: First\"]\n    n3[\"3: Second\"]\n    n2 --> n3\n  end\nend\n"
